# Geant4

QD/: CMakeLists.txt  sim.cc
QD-2/: CMakeCache.txt  README
QD-2/build1/: CMakeCache.txt  cmake_install.cmake  output.root  plot.C  test.mac
QD-2/build2/: CMakeCache.txt  cmake_install.cmake
QD-2/build3/: CMakeCache.txt  Makefile
QD-2/build4/: CMakeCache.txt  Makefile  cmake_install.cmake  plot.C  plot1.C  sim
QD-2/build_100/: CMakeCache.txt  Makefile  cmake_install.cmake  plot1.C  test.mac  ui.mac
QD-2/build_101/: CMakeCache.txt  Makefile  cmake_install.cmake  output.root  sim
QD-2/build_110/: CMakeCache.txt  Makefile  cmake_install.cmake  sim
QD-2/build_111/: CMakeCache.txt  Makefile  cmake_install.cmake
QD-2/build_o_100k/: CMakeCache.txt  Makefile  cmake_install.cmake  sim  test.mac
QD-2/build_o_10k/: CMakeCache.txt  Makefile  cmake_install.cmake  plot.C
QD-2/build_original_10000/: CMakeCache.txt  Makefile  cmake_install.cmake  output.root
QD-2/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PhotoSD.hh  PrimaryGeneratorAction.hh  SteppingAction.hh
QD-2/pluh/: CMakeCache.txt  Makefile  cmake_install.cmake
QD-2/pluh1/: CMakeCache.txt  Makefile  cmake_install.cmake  output.root  plot.C  reflect.mac  sim
QD-2/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhotoHit.cc  PhotoSD.cc  (+3 more)
QD/build1/: Makefile  sim
QD/build2/: Makefile  plot.C  sim
QD/build3/: cmake_install.cmake  plot.C  plot1.C  sim
QD/example/yield-1/: plot.C
QD/include/: DetectorConstruction.hh  EventAction.hh  PhotoHit.hh  PrimaryGeneratorAction.hh  RunAction.hh
QD/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhotoSD.cc  PrimaryGeneratorAction.cc  RunAction.cc
sim/: CMakeLists.txt  construction.cc  construction.hh  physics.cc  physics.hh  sim.cc
(+1 files in other folders)
